--- a/client/index.html
+++ b/client/index.html
@@ -27,7 +27,7 @@
       href="https://fonts.googleapis.com/css2?family=Inria+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Lexend+Deca:wght@100..900&display=swap"
       rel="stylesheet"
     />
-    <title>Vite + React + TS</title>
+    <title>Economa</title>
   </head>
   <body>
     <div id="root"></div>
